--- a/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.html
+++ b/Quizup-Angular-Application/src/app/shared/components/navbar/navbar.html
@@ -1,5 +1,5 @@
 <header [ngClass]="isScrolled ? 'scrolled' : ''">
-  <div class="logo-div">
+  <div class="logo-div" (click)="onLogoClick()">
     <img src="" alt="" />
     <h1>Quizup</h1>
   </div>
