--- a/Quizup-Angular-Application/src/styles.css
+++ b/Quizup-Angular-Application/src/styles.css
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
-@import url(https://fonts.googleapis.com/css2?family=Titillium+Web:wght@100;200;300;400;500;600;800;900&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;800;900&display=swap);
 
 body {
-  font-family: "Titillium Web", sans-serif !important;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
