refactor : Modularized quiz result dialog

--- a/Quizup-Angular-Application/src/app/features/quiz/quiz.html
+++ b/Quizup-Angular-Application/src/app/features/quiz/quiz.html
@@ -27,3 +27,10 @@
     [progress]="progress"
   ></app-quiz-timer>
 </div>
+
+<app-quiz-result-dialog
+  [score]="quizScore"
+  [visible]="showResultDialog"
+  (reviewAnswers)="reviewAnswers()"
+  (goBackToQuizzes)="goBackToQuizzes()"
+></app-quiz-result-dialog>
