--- a/Quizup-Angular-Application/src/app/features/quiz/quiz.html
+++ b/Quizup-Angular-Application/src/app/features/quiz/quiz.html
@@ -1,6 +1,8 @@
 <div
   class="w-full h-full flex items-center justify-center absolute top-0 left-0 z-10"
 >
+  <p-toast />
+
   <button
     (click)="prevQuestion()"
     class="absolute left-[5vw] scale-150 cursor-pointer"
