--- a/Quizup-Angular-Application/src/app/features/admin/teachers-list/teachers-list.component.html
+++ b/Quizup-Angular-Application/src/app/features/admin/teachers-list/teachers-list.component.html
@@ -1,3 +1,6 @@
+<app-breadcrumbs
+  [breadcrumbs]="[{ label: 'Admin', url: '/admin' }, { label: 'Teachers' }]"
+></app-breadcrumbs>
 <div class="table-list-container">
   <div class="header">
     <h2>Teachers List</h2>
@@ -32,6 +35,7 @@
         </td>
         <td>
           <button (click)="updateTeacher(teacher)">Update</button>
+          <button (click)="deleteTeacher(teacher.id)">Delete</button>
         </td>
       </tr>
     </tbody>
