--- a/Quizup-Angular-Application/src/styles.css
+++ b/Quizup-Angular-Application/src/styles.css
@@ -1,10 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
 @import url(https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;800;900&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;800;900&display=swap);
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
+
 
 body {
   padding: 30px;
