refactor - Refactor and reorganize code structure

--- a/Quizup-Angular-Application/src/styles.css
+++ b/Quizup-Angular-Application/src/styles.css
@@ -5,10 +5,8 @@
 
 body {
   /* font-family: 'Inter', sans-serif; */
-  font-family: 'Poppins', sans-serif;
-
+  font-family: "Poppins", sans-serif;
 }
-
 
 body {
   padding: 30px;
