--- a/Quizup-Angular-Application/src/app/features/notification/notification.css
+++ b/Quizup-Angular-Application/src/app/features/notification/notification.css
@@ -1,3 +1,10 @@
+h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
 .notifications-title {
   font-size: 1.8rem;
   font-weight: 600;
