--- a/Quizup-Angular-Application/src/app/features/admin/dialogs/update-student-dialog/update-student-dialog.component.html
+++ b/Quizup-Angular-Application/src/app/features/admin/dialogs/update-student-dialog/update-student-dialog.component.html
@@ -1,19 +1,21 @@
-<h2>Update Student</h2>
-<form [formGroup]="form" (ngSubmit)="onSubmit()" class="update-form">
-  <label>
-    First Name
-    <input type="text" formControlName="firstName" required />
-  </label>
-  <label>
-    Last Name
-    <input type="text" formControlName="lastName" required />
-  </label>
-  <label>
-    Email
-    <input type="email" formControlName="email" required />
-  </label>
+<h2 class="dialog-title">Update Student</h2>
+<form [formGroup]="studentUpdateForm" class="update-form">
+  <label for="firstName">First Name:</label>
+  <input id="firstName" formControlName="firstName" />
+
+  <label for="lastName">Last Name:</label>
+  <input id="lastName" formControlName="lastName" />
+
+  <label for="classId">Class:</label>
+  <select id="classId" formControlName="classId">
+    <option value="" disabled>Select class</option>
+    <option *ngFor="let classe of availableClasses" [value]="classe.id">
+      {{ classe.name }}
+    </option>
+  </select>
+
   <div class="actions">
+    <button type="button" (click)="onSave()">Save</button>
     <button type="button" (click)="onCancel()">Cancel</button>
-    <button type="submit" [disabled]="form.invalid">Update</button>
   </div>
 </form>
