--- a/Quizup-Angular-Application/src/app/features/admin/dialogs/update-teacher-dialog/update-teacher-dialog.component.html
+++ b/Quizup-Angular-Application/src/app/features/admin/dialogs/update-teacher-dialog/update-teacher-dialog.component.html
@@ -1,19 +1,69 @@
-<h2>Update Teacher</h2>
-<form [formGroup]="form" (ngSubmit)="onSubmit()" class="update-form">
-  <label>
-    First Name
-    <input type="text" formControlName="firstName" required />
-  </label>
-  <label>
-    Last Name
-    <input type="text" formControlName="lastName" required />
-  </label>
-  <label>
-    Email
-    <input type="email" formControlName="email" required />
-  </label>
+<h2 class="dialog-title">Update Teacher</h2>
+<form [formGroup]="teacherUpdateForm" class="update-form">
+  <label for="firstName">First Name:</label>
+  <input id="firstName" formControlName="firstName" />
+
+  <label for="lastName">Last Name:</label>
+  <input id="lastName" formControlName="lastName" />
+
+  <div class="form-group">
+    <label for="subjects">Subjects:</label>
+    <select id="subjects" (change)="addSubject($event)" class="form-control">
+      <option value="" disabled selected>Select subject</option>
+      <option *ngFor="let subject of availableSubjects" [value]="subject.id">
+        {{ subject.name }}
+      </option>
+    </select>
+    <div class="selected-list">
+      <span
+        *ngFor="let subjectId of subjectsArray.controls; let i = index"
+        class="badge"
+      >
+        {{ getSubjectName(subjectId.value) }}
+        <button type="button" (click)="removeSubject(i)">&times;</button>
+      </span>
+    </div>
+    <div
+      *ngIf="
+        teacherUpdateForm.get('subjectIds')?.invalid &&
+        teacherUpdateForm.get('subjectIds')?.touched
+      "
+      class="text-danger"
+    >
+      <p>At least one subject is required.</p>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="classes">Classes:</label>
+    <select id="classes" (change)="addClass($event)" class="form-control">
+      <option value="" disabled selected>Select class</option>
+      <option *ngFor="let classe of availableClasses" [value]="classe.id">
+        {{ classe.name }}
+      </option>
+    </select>
+    <div class="selected-list">
+      <span
+        *ngFor="let classId of classesArray.controls; let i = index"
+        class="badge"
+      >
+        {{ getClassName(classId.value) }}
+        <button type="button" (click)="removeClass(i)">&times;</button>
+      </span>
+    </div>
+    <div
+      *ngIf="
+        teacherUpdateForm.get('classIds')?.invalid &&
+        teacherUpdateForm.get('classIds')?.touched
+      "
+      class="text-danger"
+    >
+      <p>At least one class is required.</p>
+    </div>
+  </div>
+
   <div class="actions">
+    <button type="button" (click)="onSave()">Save</button>
     <button type="button" (click)="onCancel()">Cancel</button>
-    <button type="submit" [disabled]="form.invalid">Update</button>
   </div>
 </form>
