--- a/Quizup-Angular-Application/src/app/features/quiz/components/quiz-card/quiz-card.html
+++ b/Quizup-Angular-Application/src/app/features/quiz/components/quiz-card/quiz-card.html
@@ -2,13 +2,18 @@
   <h2>{{ quiz?.title }}</h2>
   <div>
     <p><strong>Description:</strong> {{ quiz?.description }}</p>
-    <p><strong>Created By:</strong> {{ quiz?.createdBy }}</p>
+    <p>
+      <strong>Created By:</strong> {{ quiz?.teacher?.firstName }} {{
+      quiz?.teacher?.lastName }}
+    </p>
     <p><strong>Created At:</strong> {{ quiz?.createdAt | date }}</p>
     <p><strong>Due Date:</strong> {{ quiz?.dueDate | date }}</p>
     <p>
       <strong>Number of Questions:</strong> {{ quiz?.quizQuestions?.length || 0
       }}
     </p>
+    <p><strong>Subject:</strong> {{ quiz?.subject?.name }}</p>
+    <p><strong>Class:</strong> {{ quiz?.classe?.name }}</p>
     @if(showAttempt) {
     <button class="btn-attempt" (click)="startQuiz()">Attempt Quiz</button>
     } @else {
