--- a/Quizup-Angular-Application/src/app/features/quiz/pages/quiz-submissions/quiz-submissions-page.html
+++ b/Quizup-Angular-Application/src/app/features/quiz/pages/quiz-submissions/quiz-submissions-page.html
@@ -1,5 +1,5 @@
 <div class="quiz-submissions-container">
-  <h2>Quiz Submissions</h2>
+  <h2>My Submissions</h2>
 
   <div class="quiz-detail-container">
     <div class="quiz-info">
