--- a/Quizup-Angular-Application/src/app/features/quiz/components/quiz-result-dialog/quiz-result-dialog.css
+++ b/Quizup-Angular-Application/src/app/features/quiz/components/quiz-result-dialog/quiz-result-dialog.css
@@ -32,6 +32,20 @@
   }
 }
 
+button {
+  flex: 1;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 10px;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  color: #fff;
+  margin-top: 1rem;
+  font-family: "Poppins";
+}
+
 .result-dialog h2 {
   color: #7c3aed;
   font-size: 2rem;
@@ -49,20 +63,15 @@
   justify-content: center;
 }
 
-.result-dialog-actions button {
-  padding: 0.7rem 1.5rem;
-  border-radius: 8px;
-  border: none;
-  font-size: 1.1rem;
-  font-weight: 600;
-  background: linear-gradient(90deg, #7c3aed 0%, #f9e6f7 100%);
-  color: #fff;
-  cursor: pointer;
-  box-shadow: 0 2px 8px rgba(124, 58, 237, 0.09);
-  transition: background 0.2s, color 0.2s;
+.btn-review {
+  background: #ff647c;
+}
+.btn-go-back {
+  background: #3b82f6;
 }
 
-.result-dialog-actions button:hover {
-  background: linear-gradient(90deg, #f9e6f7 0%, #7c3aed 100%);
-  color: #7c3aed;
+.btn-review:hover,
+.btn-go-back:hover {
+  transform: scale(1.05);
+  filter: brightness(1.1);
 }
